Image Optimization + Public folder + Minor fixes

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./src/Assets/IMG/Favicon/favicon.ico" />
+    <link rel="icon" href="/IMG/Favicon/favicon.ico" />
     <link rel="manifest" href="/manifest.json" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./src/Assets/IMG/Favicon/apple-touch-icon.png"
+      href="/IMG/Favicon/apple-touch-icon.png"
     />
     <meta name="keywords" content="EMC, Exposé, Inégalité, Sexes" />
     <meta name="description" content="Expo Promotion l'Egalité Homme-Femme" />
@@ -29,6 +29,33 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
     />
     <title>Promotion de l'égalité Homme-Femme</title>
+    <!-- Social -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:url" content="https://expo-emc.vercel.app/" />
+    <meta name="twitter:title" content="EMC-Expo" />
+    <meta
+      name="twitter:description"
+      content="Expo Promotion l'Egalité Homme-Femme"
+    />
+    <meta
+      name="twitter:image"
+      content="https://expo-emc.vercel.app/IMG/Favicon/android-chrome-192x192.png"
+    />
+    <meta name="twitter:creator" content="@DevIlingu" />
+    <meta name="twitter:app:country" content="FR" />
+    <meta name="twitter:app:name:iphone" content="EMC-Expo" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="EMC-Expo" />
+    <meta
+      property="og:description"
+      content="Expo Promotion l'Egalité Homme-Femme"
+    />
+    <meta property="og:site_name" content="EMC-Expo" />
+    <meta property="og:url" content="https://expo-emc.vercel.app" />
+    <meta
+      property="og:image"
+      content="https://expo-emc.vercel.app/IMG/Favicon/android-chrome-192x192.png"
+    />
   </head>
   <body>
     <noscript
