Alpha-5 (Podium + fixes)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="application-name" content="Expo EMC" />
     <meta name="robots" content="noindex,nofollow,noodp" />
     <meta name="googlebot" content="noindex,nofollow" />
+    <meta name="theme-color" content="#191919" />
     <!-- Modules -->
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <link
